# caio

./: .gitattributes  makefile  pyproject.toml  requirements.txt  treinamento.py  ui.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
checkpoints/: ABEV3.SA_Bidirectional_Seq2Seq_best.h5  ABEV3.SA_CNN_LSTM_best.h5  ABEV3.SA_Ensemble_Stacking_best.h5  ABEV3.SA_LSTM_Otimizado_best.h5  ABEV3.SA_Transformer_best.h5  B3SA3.SA_Bidirectional_Seq2Seq_best.h5  B3SA3.SA_CNN_LSTM_best.h5  B3SA3.SA_Ensemble_Stacking_best.h5  B3SA3.SA_LSTM_Otimizado_best.h5  B3SA3.SA_Transformer_best.h5  BBDC4.SA_Bidirectional_Seq2Seq_best.h5  BBDC4.SA_CNN_LSTM_best.h5  BBDC4.SA_Ensemble_Stacking_best.h5  BBDC4.SA_LSTM_Otimizado_best.h5  BBDC4.SA_Transformer_best.h5  BPAC11.SA_Bidirectional_Seq2Seq_best.h5  BPAC11.SA_CNN_LSTM_best.h5  BPAC11.SA_Ensemble_Stacking_best.h5  BPAC11.SA_LSTM_Otimizado_best.h5  BPAC11.SA_Transformer_best.h5  HAPV3.SA_Bidirectional_Seq2Seq_best.h5  HAPV3.SA_CNN_LSTM_best.h5  HAPV3.SA_Ensemble_Stacking_best.h5  HAPV3.SA_LSTM_Otimizado_best.h5  HAPV3.SA_Transformer_best.h5  IRBR3.SA_Bidirectional_Seq2Seq_best.h5  IRBR3.SA_CNN_LSTM_best.h5  IRBR3.SA_Ensemble_Stacking_best.h5  IRBR3.SA_LSTM_Otimizado_best.h5  IRBR3.SA_Transformer_best.h5  ITUB4.SA_Bidirectional_Seq2Seq_best.h5  ITUB4.SA_CNN_LSTM_best.h5  ITUB4.SA_Ensemble_Stacking_best.h5  ITUB4.SA_LSTM_Otimizado_best.h5  ITUB4.SA_Transformer_best.h5  JBSS3.SA_Bidirectional_Seq2Seq_best.h5  JBSS3.SA_CNN_LSTM_best.h5  JBSS3.SA_Ensemble_Stacking_best.h5  JBSS3.SA_LSTM_Otimizado_best.h5  (+40 more)
(+93 files in other folders)
