[project]
name = "caio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "google-generativeai>=0.8.5",
    "joblib>=1.5.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "ta>=0.11.0",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.61",
]
